[package]
name = "meaning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
